<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonConversation"
        style="@style/Button"
        android:text="@string/label_conversation"
        />
    <Button
        android:id="@+id/buttonLogin"
        style="@style/Button"
        android:text="@string/label_login"
        />
    <Button
        android:id="@+id/buttonCalculator"
        style="@style/Button"
        android:text="@string/label_calculator"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/my_name"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/my_code"
        />

</LinearLayout>